Plussz a statikus html beolvasás példájához

--- a/template/index.html
+++ b/template/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
     <title>Teszt{alcim}</title>
-    <meta name="keywords" content="" />
+    <meta name="keywords" content="webmotor" />
     <meta name="description" content="" />
     <script type="text/javascript" src="js/check.js"></script>
     <link rel="stylesheet" type="text/CSS" href="style.css" />
@@ -15,12 +15,13 @@
          <a href="?c=10">1. menü</a>
          <a href="?c=17">2. menü</a>
          <a href="?c=20">3. menü</a>
+         <a href="?c=proba">4. menü (statikus html)</a>
       </div>
       <div id="content">
          {tartalom}
       </div>
       <div id="footer">
-         Lábléc 
+         Lábléc
       </div>
    </div>
 </body>
