--- a/template/index.html
+++ b/template/index.html
@@ -3,19 +3,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="hu" lang="hu-HU">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-    <title>Teszt{alcim}</title>
+    <title>SA:MP{alcim}</title>
     <meta name="keywords" content="webmotor" />
     <meta name="description" content="" />
     <script type="text/javascript" src="js/check.js"></script>
     <link rel="stylesheet" type="text/CSS" href="style.css" />
+    <link href="styles.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="../styles.css" type="text/css"/>
+
 </head>
-<body>
+<body background="graphics/Waterfall_high_quality_hd_wallpaper.jpg">
    <div id="frame">
       <div id="head">
-         <a href="?c=10">1. menü</a>
-         <a href="?c=17">2. menü</a>
-         <a href="?c=20">3. menü</a>
-         <a href="?c=proba">4. menü (statikus html)</a>
+         <div id='cssmenu'>
+            <ul>
+               <li class='active'>
+               <a href='?c=10'><span>1. menü</span></a></li>
+               <li><a href='?c=17'><span>2. menü</span></a></li>
+               <li><a href='?c=20'><span>3. menü</span></a></li>
+               <li><a href='?c=proba'><span>4. menü (statikus html)</span></a></li>
+            </ul>
+</div>
+        
       </div>
       <div id="content">
          {tartalom}
