--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@
 }
 
 #head{
-   height: 100px;
+   height: 35px;
    width: 100%;
-   background-color: #cecece;
 }
 
 #content{
    min-heigt: 400px;
    padding: 10px;
+   background-color: white;
+   opacity: 0.7;
 }
 
 #footer{
