--- a/template/index.html
+++ b/template/index.html
@@ -18,10 +18,10 @@
          <div id='cssmenu'>
             <ul>
                <li class='active'>
-               <a href='?c=10'><span>1. menü</span></a></li>
-               <li><a href='?c=17'><span>2. menü</span></a></li>
-               <li><a href='?c=20'><span>3. menü</span></a></li>
-               <li><a href='?c=proba'><span>4. menü (statikus html)</span></a></li>
+               <a href='?c=10'><span>Home</span></a></li>
+               <li><a href='?c=17'><span>Fórum</span></a></li>
+               <li><a href='?c=20'><span>Users</span></a></li>
+               <li><a href='?c=18'><span>Samp szerver</span></a></li>
             </ul>
 </div>
         
@@ -30,7 +30,8 @@
          {tartalom}
       </div>
       <div id="footer">
-         Lábléc
+          <br/>
+              <a href="#">Contact</a> | <img src="graphics/facebook-logo2.gif" alt="Smiley face" height="15" width="15"/>  <a href="#">Facebook</a>| <a href="#">E-mail</a> | <img src="graphics/twitter_logo.png" alt="Smiley face" height="15" width="15"/><a href="#">Twitter</a>
       </div>
    </div>
 </body>
